# ocr2

./: .coveragerc  .gitignore  QUICK-START.txt  START-HEADOFFICE.bat  STOP-HEADOFFICE.bat  docker-compose.yml
backend/: .coveragerc  .env  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  batches.py  metrics.py  review.py
backend/app/constants/: banks.py
backend/app/db/: crud.py  models.py  session.py
backend/app/ocr/: __init__.py  cheques (1).csv  cheques (2).csv  cheques (3).csv  cheques.csv  classifier.py  labels.py  locator.py  locator_utils.py  ocr_engine.py  preflight.py  text_utils.py
backend/app/parsers/: __init__.py  fields.py
backend/app/persistence/: audit.py
backend/app/pipeline/: postprocess.py
backend/ocr2_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/reports/: FABMISR_30026_result_loc.json  FABMISR_30027_result_loc.json  FABMISR_30028_result_loc.json  FABMISR_30029_result_loc.json  FABMISR_30030_result_loc.json  FABMISR_30031_result_loc.json  FABMISR_30032_result_loc.json  FABMISR_30033_result_loc.json  FABMISR_30034_result_loc.json  FABMISR_30035_result_loc.json  FABMISR_30036_result_loc.json  FABMISR_30037_result_loc.json  FABMISR_30038_result_loc.json  locator_eval.csv
backend/tests/: conftest.py  test_finalize_endpoint.py
backend/tools/: check_ocr_quality.py  eval_locator.py  field_ocr_eval.py  pipeline_eval.py  pipeline_route_summary.py  refine_template_from_reports.py  run_locator.py  run_ocr_on_images.py  summarize_ocr_lines.py
frontend/: .eslintrc.cjs  (+6 more)
(+314 files in other folders)
