[project]
name = "ocr2-backend"
version = "0.1.0"
description = "Cheque processing backend"
authors = [{ name = "Team" }]
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.8",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["app"]
